<resources>
    <string name="app_name">Smart Farm</string>
    <string name="title_webcam">Webcam</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_setting">Setting</string>
    <string name="head_temperature">Temperature</string>
    <string name="head_humidity">Humidity</string>
    <string name="head_light_intensity">Light Intensity</string>
    <string name="head_soil_moisture">Soil Moisture</string>
    <string name="head_water_flow_controller">Water Flow Controller</string>
    <string name="water_flow_id_1">ID: 01</string>
    <string name="water_flow_id_2">ID: 02</string>
    <string name="water_flow_id_3">ID: 03</string>

    <string name="switch_water_flow_id_1">ID1</string>
    <string name="switch_water_flow_id_2">ID2</string>
    <string name="switch_water_flow_id_3">ID3</string>

    <string name="actionbar_dashboard">Smart Farm Summary Dashboard</string>
    <string name="actionbar_webcam">Smart Farm Webcam</string>
    <string name="actionbar_setting">Setting</string>
    <string name="eng_lang">English</string>
    <string name="header_language">Language</string>
    <string name="thai_lang">ภาษาไทย</string>
    <string name="cam_id">Camera ID: 01</string>
    <string name="media_url">rtsp://admin:93759375@192.168.1.35:59500</string>

</resources>
