<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/h_temperature"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dash_vertical_space"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/head_temperature"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/h_humidity"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dash_vertical_space"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/head_humidity"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.861"
            app:layout_constraintStart_toEndOf="@+id/h_temperature"
            app:layout_constraintTop_toTopOf="parent" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="@dimen/dash_vertical_space"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="40dp"
            android:paddingRight="55dp">

            <com.budiyev.android.circularprogressbar.CircularProgressBar
                android:id="@+id/temp_prog"
                android:layout_width="100dp"
                android:layout_height="100dp"
                app:animateProgress="true"
                app:backgroundStrokeColor="#93dbe9"
                app:backgroundStrokeWidth="12dp"
                app:drawBackgroundStroke="true"
                app:foregroundStrokeCap="butt"
                app:foregroundStrokeColor="#689cc5"
                app:foregroundStrokeWidth="7dp"
                app:indeterminate="false"
                app:indeterminateMinimumAngle="45"
                app:indeterminateRotationAnimationDuration="1200"
                app:indeterminateSweepAnimationDuration="600"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/h_temperature"
                app:maximum="100"
                app:progress="40"
                app:progressAnimationDuration="100"
                app:startAngle="90" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingRight="25dp">

            <me.itangqi.waveloadingview.WaveLoadingView
                android:id="@+id/waveLoadingView"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.75"
                app:layout_constraintStart_toEndOf="@+id/temp_prog"
                app:layout_constraintTop_toBottomOf="@+id/h_humidity"
                app:wlv_borderColor="#93dbe9"
                app:wlv_borderWidth="3dp"
                app:wlv_progressValue="40"
                app:wlv_round_rectangle="true"
                app:wlv_shapeType="circle"
                app:wlv_titleCenter="66%"
                app:wlv_titleCenterColor="@android:color/black"
                app:wlv_titleCenterSize="16sp"
                app:wlv_triangle_direction="north"
                app:wlv_waveAmplitude="70"
                app:wlv_waveColor="#689cc5" />
        </FrameLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="@dimen/dash_vertical_space"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <TextView
            android:id="@+id/h_light"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/head_light_intensity"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/temp_prog" />

        <TextView
            android:id="@+id/h_moisture"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/head_soil_moisture"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.754"
            app:layout_constraintStart_toEndOf="@+id/h_light"
            app:layout_constraintTop_toBottomOf="@+id/waveLoadingView" />

    </LinearLayout>

    <TextView
        android:id="@+id/h_water_flow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="@dimen/dash_vertical_space"
        android:text="@string/head_water_flow_controller"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout5" />

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="@dimen/dash_vertical_space"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingRight="10dp"
        android:weightSum="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        <TextView
            android:id="@+id/light_value"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="50dp"
            android:layout_weight="1"
            android:background="@drawable/light"
            android:gravity="center"
            android:text="42%" />

        <TextView
            android:id="@+id/mois_value"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:background="@drawable/mois"
            android:gravity="center"
            android:text="87%" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="@dimen/dash_vertical_space"
        android:orientation="horizontal"
        android:paddingLeft="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/h_water_flow">

        <Switch
            android:id="@+id/switch1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingRight="3dp"
            android:text="@string/water_flow_id_1"
            android:theme="@style/SCBSwitch" />

        <Switch
            android:id="@+id/switch2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingRight="3dp"
            android:text="@string/water_flow_id_2"
            android:theme="@style/SCBSwitch" />

        <Switch
            android:id="@+id/switch3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/water_flow_id_3"
            android:theme="@style/SCBSwitch" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>